--- a/.policy.yml
+++ b/.policy.yml
@@ -2,7 +2,7 @@ policy:
   approval:
     - and:
       - anyone approves
-      - lgtm approves
+      - admin approves
 approval_rules:
   - name: anyone approves
     options:
