--- a/.policy.yml
+++ b/.policy.yml
@@ -5,7 +5,7 @@ policy:
       - admin approves
       - and:
         - day01 owners approve
-        - day01 owners approve
+        - day02 owners approve
 approval_rules:
   - name: anyone approves
     options:
@@ -24,7 +24,7 @@ approval_rules:
       count: 1
       users:
         - "srabraham"
-  - name: day01 owners approve:
+  - name: day01 owners approve
     if:
       changed_files:
         paths: "day01/.*"
@@ -34,7 +34,7 @@ approval_rules:
       count: 1
       organizations: ["VideoAmp"]
       users: ["srabraham"]
-  - name: day01 owners approve:
+  - name: day02 owners approve
     if:
       changed_files:
         paths: "day02/.*"
